
apply plugin: 'java'
apply plugin: 'application'

mainClassName = 'org.peidevs.waro.Main'

repositories {
    jcenter()
}

dependencies {
    implementation 'com.codepoetics:protonpack:1.16'
    implementation 'com.google.guava:guava:24.1-jre'
    implementation 'org.apache.commons:commons-lang3:3.10'
    implementation 'org.springframework:spring-context:5.2.5.RELEASE'

    testImplementation 'junit:junit:4.12'
}

sourceCompatibility = 15

tasks.withType(JavaCompile) {
    options.compilerArgs += '--enable-preview'
}

tasks.withType(Test) {
    jvmArgs += "--enable-preview"
}

tasks.withType(JavaExec) {
    jvmArgs += "--enable-preview"
}

installDist.doFirst {
    ant.delete(dir: project.stagingDir)
}

installDist {
    into project.stagingDir
}
